--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "author": "Meliorence <contact@meliorence.com> (github.com/meliorence)",
     "license": "BSD-3-Clause",
     "dependencies": {
-        "prop-types": "^15.6.1",
-        "react-addons-shallow-compare": "15.6.2"
+        "prop-types": "^15.6.1"
     },
     "peerDependencies": {
         "react": ">=15.0.0",
